Added End Trip button

--- a/app/src/main/res/layout/activity_drive_mode.xml
+++ b/app/src/main/res/layout/activity_drive_mode.xml
@@ -26,8 +26,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:backgroundTint="@color/teal_200"
+        android:backgroundTint="@color/teal_700"
         android:text="Report Hazard"
         android:textColor="#FFFFFF" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/endTripBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/reportHazardBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/teal_700"
+        android:text="End Trip"
+        android:textColor="#FFFFFF" />
+
 
 </RelativeLayout>
